--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   </div>
 
   <iframe id="yt" width="0" height="0"
-    src="musica.mp3"
+    src="https://www.youtube.com/embed/7wMiMDBHnJ0?autoplay=1&loop=1&playlist=7wMiMDBHnJ0"
     frameborder="0" allow="autoplay" allowfullscreen>
   </iframe>
 
@@ -227,7 +227,7 @@
         ytPlayer.src = "";
         ytToggleBtn.textContent = "▶";
       } else {
-        ytPlayer.src = "musica.mp3";
+        ytPlayer.src = "https://www.youtube.com/embed/7wMiMDBHnJ0?autoplay=1&loop=1&playlist=7wMiMDBHnJ0";
         ytToggleBtn.textContent = "⏸";
       }
       tocando = !tocando;
